takeaways, niching, diversity

--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -20,15 +20,16 @@
     "\n",
     "To this end we will define and use the Genetic Algorithms as our stochastic search mechanism, where Pareto Fronts are used as its *Selection Function* as detailed below. \n",
     "\n",
-    "**Main Take Aways**.   \n",
-    "* In a stochastic search no two Pareto front are the same -- but two Pareto fronts are always better than one! You will learn that Pareto Fronts will vary, but one can benifit from joining set of solutions together to get better results.  \n",
-    "* The basics of Genetic Algorithms with an emphasis on Pareto Fronts as the selection function.   \n",
-    "* You will see how the Genetic Algorithm learns by tracking the evolution of the Pareto Front.\n",
-    "\n",
+    "**Main Take Aways**.  \n",
+    "* In large combinatorial spaces we are not likely to have access to all the feasible solutions, and need to resort to subsets as proxies.\n",
+    "* The difference between the ***true Pareto front*** of all feasible solutions and ***Pareto front approximations*** of subset solutions.         \n",
+    "* ***Niching*** results in a better ***diversity*** of solutions. In practice this means that the Pareto approximation front of two or more subsets are always better than that of one.  \n",
+    "* The basics of Genetic Algorithms with an emphasis on Pareto fronts as the selection function.   \n",
+    "* You will see how the Genetic Algorithm learns by tracking the evolution of the Pareto front approximation.\n",
     "\n",
     "\n",
     "**The Knapsack Problem**   \n",
-    "In this challenge you will fill virtual knapsacks with packages that have monetary value and weight.   \n",
+    "As in the previous notebook, in this challenge you will fill virtual knapsacks with packages that have monetary value and weight.   \n",
     "The objective is to minimise the final weight of the knapsack and maximise the total monetary value of its contents.    \n",
     "(You will also be able to change the objectives from min-max to the other options: max-max and min-min, max-min.)"
    ]
@@ -39,21 +40,31 @@
    "source": [
     "**Recommended Notebook Usage**\n",
     "\n",
-    "We first recommend you be familiar with the fundamentals of Pareto fronts as introduced in the previous notebook. You will notice that some conventions used there are applied here, too.\n",
+    "We first recommend that you be familiar with the fundamentals of Pareto fronts as introduced in the previous notebook. You will notice that some conventions used there are applied here, too.\n",
     "\n",
     "Do each of the following steps at a time and answer the summary questions to ensure that the main lessons have been understood. \n",
     "\n",
     "<ul>\n",
     "      \n",
     "<details>\n",
-    "        <summary>Setup, Decision Space and Objective Space</summary> \n",
-    "            The data generation of packages and knapsacks is the same as before with the exception that we will look at a subset of all possible knapsacks, due to the fact that we will examine much large Decision Spaces. The Objective Space is the same. \n",
+    "        <summary>Setup, Decision & Objective Spaces</summary> \n",
+    "            The data generation of packages and knapsacks is the same as before with the exception that we will explore subsets of all feasible knapsacks, due to the fact that the Decision Spaces is intractable. The Objective Space and objectives are the same. \n",
     "</details>\n",
     "    \n",
     "<details>\n",
-    "        <summary>TBD</summary> \n",
-    "            TBD  \n",
+    "        <summary>Pareto Front Approximations</summary> \n",
+    "            Here you will learn how niching which improves diversity results in better Pareto front approximations.\n",
     "</details>\n",
+    "    \n",
+    "<details>\n",
+    "        <summary>Genetic Algorithms Components</summary> \n",
+    "            You will get an understanding of the different parts that make the Genetic Algorithm with an emphasis of the Pareto optimisation mechanism implemented in the selection function.\n",
+    "</details>\n",
+    "    \n",
+    "<details>\n",
+    "        <summary>Knapsack Optimisation</summary> \n",
+    "            Here you will see the Genetic Algorithm learn the Knapsack Problem while comparing results of Pareto Optimisation vs. Single Objective Optimisation.  \n",
+    "</details>  \n",
     "    \n",
     "</ul>\n",
     "    \n",
@@ -429,7 +440,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To explore the stochastic nature of the problem we will create multiple dictionaries of knapsacks which we will call *instances*.   "
+    "# Pareto Front Approximation\n",
+    "\n",
+    "In a computationally large space we are not likely to brute force our way to obtain the ***true Pareto front*** of the full feasible solution space.  At best we can calculate ***Pareto front approximations*** of subsets.\n",
+    "\n",
+    "Here we will calculate Pareto front approximations for a few subsets that we will call *instances*. \n"
    ]
   },
   {
@@ -510,7 +525,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Optimisation Objective\n",
+    "## Optimisation Objective\n",
     "\n",
     "In the knapsack problem we want to optimise for two objectives:    \n",
     "* ↓ minimise the knapsack weight \n",
@@ -566,12 +581,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pareto Front Calculation\n",
-    "`knapsacks_to_pareto_front` is a function with the same algorithm used in the previous notebook, where:  \n",
+    "## Pareto Front Calculation\n",
+    "\n",
+    " \n",
+    "\n",
+    "We will us the `knapsacks_to_pareto_front` function, which algorithm used in the previous notebook, where:  \n",
     "* input: dictionary of knapsacks\n",
     "* output: list of indexes of knapsacks that are Pareto optimal\n",
     "\n",
-    "Here we will calculate the Pareto front for each of the instances."
+    "\n"
    ]
   },
   {
@@ -688,12 +706,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Did you manage to correct the Pareto fronts correctly for each instance? \n",
+    "Did you manage to correctly identify the Pareto front for each instance? \n",
     "\n",
-    "We clearly see that each instance is a subset of the full space resulting in wildly different Pareto front estimates. \n",
-    "By estimate we refer to the fact that the Pareto front of each instance isn't the aboslute front for all the possible knapsacks. For this purpose we will later use a Genetic Algorithm to get us as close as possible to the true Pareto front.\n",
+    "We clearly see that each instance is a subset of the full space resulting in wildly different Pareto front estimates or approximations. \n",
     "\n",
-    "To conclude this section we will see that we can combine the four instances to one to obtain a mutual Pareto front which is better than each individual."
+    "Next we will see that we can combine the four instances to one to obtain a mutual Pareto front which is better than each individual."
    ]
   },
   {
@@ -778,7 +795,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This visualisation clearly shows that combining multiple instances to one results in a pareto front that is better than each individuals one."
+    "This visualisation clearly shows that combining multiple instances/subsets to one results in a Pareto front approximation that is better than those of each individual.\n",
+    "\n",
+    "\n",
+    "The take away from this is it that is recommended to take solutions from different initial seeds.  This approach is called ***niching***. Niching is a manner in which you can explore more effectively explore the Decision Space without runing into local minima in the Objective Space. Another way of thinking about niching is that it is a mechanism to obtain a more diverse set of solutions which results in a better Pareto front approximation.\n",
+    "\n",
+    "As an analogy, think of our ancestors leaving the [Cradle of Humankind](https://en.wikipedia.org/wiki/Cradle_of_Humankind) about 50,000 years ago. In effect they seeded different populations in Europe, Far East and Australia while others remained in Africa. Each developed its own culture to make the world a richer place in terms of diversity, as opposed to everyone being the same. This analogy is imperfect in many ways, but hopefully gives a picture to have in mind. \n",
+    "\n",
+    "<img src=\"https://images.ctfassets.net/cnu0m8re1exe/3O1R69w3U6bLrBS6ig5J9E/a875a35bd1ae07693908b12ca2e5e73a/bae1HR-1024x532.jpg?w=650\" width=500>\n",
+    "\n",
+    "\n",
+    "This analogy is our segue way to the next topic of having the initial population learn to create more fit ones. In the next section we will learn about Genetic Algorithms.   "
    ]
   },
   {
@@ -788,9 +815,32 @@
     "# Genetic Algorithm Components\n",
     "\n",
     "\n",
-    "<img src=\"http://aqibsaeed.github.io/img/ga.png\" width=500>\n",
+    "## Genetic Algorithm\n",
     "\n",
-    "This is an illustraction of an example Genetic Algorithm architecture as applied by [Aaqib Saeed](http://aqibsaeed.github.io/2017-08-11-genetic-algorithm-for-optimizing-rnn/). \n",
+    "**What?**   \n",
+    "Inspired by Darwin's theory of evolution, in 1960 John Holland introduced [Evolutionary Computation](https://en.wikipedia.org/wiki/Evolutionary_computation) as a family of algorithms for optimisation. The main idea is to have a population-based trial and error problem solvers with a stochastic optimization character.  \n",
+    "\n",
+    "[Genetic Algorithms](https://en.wikipedia.org/wiki/Genetic_algorithm) is one technique which is commonly used to generate high-quality solutions to optimisation and search problems. It relies on biologically inspired operators such as mutation, crossover and selection, which we will explore in detail.  \n",
+    "\n",
+    "Perhaps it is best to have in mind a quote from the 17th century English writer and gardener John Evelyn:  \n",
+    "\n",
+    "<img src=\"https://www.azquotes.com/picture-quotes/quote-explore-everything-keep-the-best-john-evelyn-121-91-15.jpg\" width=500>\n",
+    "\n",
+    "\n",
+    "**Why?**  \n",
+    "We will use it for the knapsack problem because:  \n",
+    "* It works well for intractable combinatorial spaces  \n",
+    "* Diversity, Niching - it find multiples and we start from different starting points. \n",
+    "* It is simple to implement\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "There are many ways to construct a Genetic Algorithm, e.g, this following illustration.\n",
+    "\n",
+    "<img src=\"http://aqibsaeed.github.io/img/ga.png\" width=500>  \n",
+    "\n",
+    "(image credit: [Aaqib Saeed](http://aqibsaeed.github.io/2017-08-11-genetic-algorithm-for-optimizing-rnn/)).\n",
     "\n",
     "We will now explore the various components of the Genetic Algorithm with an emphasis on the role of Pareto Optimisation in the selection function.  "
    ]
