replaced urls with bit.ly links

--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "This notebook may be used in Google Colab. To access press this button:\n",
     "\n",
-    "<a href=\"https://colab.research.google.com/github/elzurdo/multi_objective_optimisation/blob/master/01_knapsack%202D_exhaustive.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>\n",
+    "<a href=\"https://bit.ly/pareto-front-colab\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>\n",
     "\n",
     "Here you will use the Knapsack Problem to learn about Pareto Fronts.\n",
     "\n",
@@ -620,7 +620,7 @@
     "Before addressing Pareto Fronts, which help us resolve limitations of 1D approaches, lets examine the common practice of *Single Objective Optimisation*.    \n",
     "\n",
     "In Single Objective Optimisation we collate the Objective Space to one parameter heuristic, \n",
-    "turning the multi-objective optimisation problem to 1D.  \n"
+    "turning the multi-objective optimisation problem to 1D.  "
    ]
   },
   {
@@ -1220,7 +1220,7 @@
     "\n",
     "We will explore this in the next tutorial, which is accessible in Google Colab. To access press this button: \n",
     "\n",
-    "<a href=\"https://colab.research.google.com/github/elzurdo/multi_objective_optimisation/blob/master/02_knapsack_2D_stochastic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>"
+    "<a href=\"https://bit.ly/genetic-algorithm-colab\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>"
    ]
   }
  ],
