--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -10,7 +10,7 @@
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/f/fd/Knapsack.svg\" width=250>\n",
     "\n",
     "This notebook may be used in Google Colab. To access press this button:    \n",
-    "<a href=\"https://colab.research.google.com/github/elzurdo/multi_objective_optimisation/blob/master/02_knapsack_2D_stochastic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>\n",
+    "<a href=\"https://bit.ly/genetic-algorithm-colab\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>\n",
     "\n",
     "Here you will learn about implementing Pareto Optimisation with a Genetic Algorithm.  \n",
     "\n",
@@ -40,7 +40,7 @@
    "source": [
     "**Recommended Notebook Usage**\n",
     "\n",
-    "We first recommend that you be familiar with the fundamentals of Pareto fronts as introduced in the previous notebook. You will notice that some conventions used there are applied here, too.\n",
+    "We first recommend that you be familiar with the fundamentals of Pareto fronts as introduced in the previous notebook ([Github](https://bit.ly/pareto-front), [Google Colab](https://bit.ly/pareto-front-colab)). You will notice that some conventions used there are applied here, too.\n",
     "\n",
     "Do each of the following steps at a time and answer the summary questions to ensure that the main lessons have been understood. \n",
     "\n",
