actions to take

--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1598,7 +1598,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Knacksack Optimisation\n",
+    "# Knapsack Optimisation\n",
     "\n",
     "Now we'll put all the components together and examine the evolution of the Pareto front estimates of the Knapsack problem!\n",
     "\n",
@@ -2279,7 +2279,18 @@
     "\n",
     "Another takeaway is the importance of visualising. Here we put a lot of focus on visualising the Objective Space and a little on the Decision Space. Depending on your project's setup you can decide how much focus to put on each to improve decision to be made.  \n",
     "\n",
-    "Also, our Objective space was 2D (`weight`, `value`). Further consideration of visualisation is required for more dimensions. E.g, 2D slices in the Objective Space using colors-grading/shapes/sizes for additional numerical/categorical dimensions.  "
+    "Also, our Objective space was 2D (`weight`, `value`). Further consideration of visualisation is required for more dimensions. E.g, 2D slices in the Objective Space using colors-grading/shapes/sizes for additional numerical/categorical dimensions.  \n",
+    "\n",
+    "\n",
+    "**Actions To Take**\n",
+    "- [ ] In [Knapsack Optimisation](#Knapsack-Optimisation) change to `n_generations=1` and increase to `2`, `3` etc. to see the step-by-step improvement of the Pareto front.  \n",
+    "- [ ] In [Knapsack Optimisation](#Knapsack-Optimisation) change  `parents_compete`. How does this impact the results? \n",
+    "- [ ] Change the optimisation objective to minimising both weight and monetary value.   \n",
+    "This is done, e.g, by setting `objective_mode={'weight': 'min', 'value': 'min'}` in [Optimisation Objective](#Optimisation-Objective).   \n",
+    "Try to guess in advance which knapsacks are considered Pareto Optimal!   \n",
+    "Try all four combinations.  \n",
+    "- [ ] Examine the $value\\sim weight^2$ distribution by modifying `value_distribution_mode=\"squared\"` in [Packages](#Packages).\n",
+    "- [ ] Create your own distribution! Create your own custom `value_distribution_mode` in [Packages](#Packages).   \n"
    ]
   },
   {
