minor annotations and visual styling

--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1899,29 +1899,33 @@
     "        \n",
     "        # --- plotting ---\n",
     "        if visualise:\n",
-    "        \n",
-    "            alpha = (1. - gen_num/(n_generations + 1))\n",
-    "            alpha = np.max([alpha, 0.1])\n",
+    "            alpha = 0.4\n",
     "\n",
-    "            marker = '-.'\n",
+    "            pf_marker = '-'\n",
+    "            color = 'gray'\n",
+    "            linewidth = 2\n",
     "            if gen_num in [0, n_generations - 1]: \n",
     "                if 0 == gen_num:\n",
     "                    marker = 's'\n",
     "                    size = 40\n",
+    "                    color = 'purple'\n",
+    "                    linewidth = 5\n",
     "                else:\n",
     "                    marker = 'x'\n",
     "                    size = 100\n",
+    "                    color = 'green'\n",
+    "                    linewidth = 5\n",
     "\n",
     "                label = f'competitors gen {gen_num + 1}'\n",
     "                plt.scatter([knapsacks['weight'] for _, knapsacks in population_competing.items()],\n",
     "                                [knapsacks['value'] for _, knapsacks in population_competing.items()],\n",
-    "                                 s=size, alpha=0.7, color='green', label=label, marker=marker, linewidth=4)\n",
+    "                                 s=size, alpha=0.7, color=color, label=label, marker=marker, linewidth=4)\n",
     "                label= f'pareto front gen {gen_num + 1}'\n",
     "            else:\n",
     "                label = None\n",
     "                \n",
     "            if display_pareto_front:\n",
-    "                plot_pareto_front(population_competing, objective_to_sort='weight', label=label, marker=f'-{marker}', color='purple', linewidth=None, alpha=alpha, markersize=size/5)\n",
+    "                plot_pareto_front(population_competing, objective_to_sort='weight', label=label, marker=pf_marker, color=color, linewidth=linewidth, alpha=alpha)\n",
     "                \n",
     "\n",
     "        \n",
@@ -1985,17 +1989,17 @@
    "metadata": {},
    "source": [
     "The above visual shows:  \n",
-    "* green squares - all competing individuals in the first generation\n",
-    "* solid line - Pareto front of the first generation  \n",
+    "* purple squares - all competing individuals in the first generation\n",
+    "* purple solid line - Pareto front of the first generation  \n",
     "\n",
     "If  `n_generations>1` you will also see  \n",
     "* greeen Xs - all competing individuals in the last generation\n",
-    "* light solid line - Pareto front of the last generation  \n",
-    "* dashed lines (for `n_generations>2`) - Pareto fronts of all intermediate generations  \n",
+    "* green solid line - Pareto front of the last generation  \n",
+    "* gray thin lines (for `n_generations>2`) - Pareto fronts of all intermediate generations  \n",
     "\n",
     "Tracking the Pareto front lines you should get a clear picture of how the genetic algorithm found better solutions.  \n",
     "\n",
-    "By increasing `n_generations` you will see improvement, until a certain point in which there is no reall cost benefit.  This does not mean that we have found the true Pareto front of this problem. I more likely got stuck in one (or more) local minima/maxima.  \n",
+    "By increasing `n_generations` you will see improvement, until a certain point in which there is no reall cost benefit.  This does not mean that we have found the true Pareto front of this problem. More likely it got stuck in one (or more) local minima/maxima. \n",
     "\n",
     "Solving for this is out of the scope of this demo and requires further exploration. We discus this in [Summary](#Summary).\n",
     "\n",
@@ -2043,7 +2047,7 @@
     "\n",
     "plt.xlim(*x_lim)\n",
     "plt.ylim(*y_lim)\n",
-    "plt.title('Single Objective Optimisation: value/weight')"
+    "plt.title(f'Single Objective Optimisation: {heuristic}')"
    ]
   },
   {
@@ -2135,11 +2139,11 @@
     "\n",
     "indv_ = single_objective_selector(population_all_pareto, n_select=1)\n",
     "key = list(indv_.keys())[0]\n",
-    "plt.plot(indv_[key]['weight'], indv_[key]['value'], '*', markersize=20, color='green', alpha=1, label='Pareto Optimisation max Value/Weight')\n",
+    "plt.plot(indv_[key]['weight'], indv_[key]['value'], '*', markersize=20, color='green', alpha=1, label=f'Pareto Optimisation max {heuristic}')\n",
     "\n",
     "indv_ = single_objective_selector(population_all_soh, n_select=1)\n",
     "key = list(indv_.keys())[0]\n",
-    "plt.plot(indv_[key]['weight'], indv_[key]['value'], '*', markersize=20, color='red', alpha=0.6, label='Single Objective Optimisation max Value/Weight')\n",
+    "plt.plot(indv_[key]['weight'], indv_[key]['value'], '*', markersize=20, color='red', alpha=0.6, label=f'Single Objective Optimisation max {heuristic}')\n",
     "\n",
     "\n",
     "plt.xlabel('weight [kg]')\n",
@@ -2313,7 +2317,7 @@
     "population_gen_pareto = {idx_knapsack: knapsack for idx_knapsack, knapsack in population_all_pareto.items() if idx_knapsack in idx_indvs_pareto}\n",
     "popuation_gen_soh     = {idx_knapsack: knapsack for idx_knapsack, knapsack in population_all_soh.items() if idx_knapsack in idx_indvs_soh}\n",
     "\n",
-    "print(f'In this generation (no. {n_generation_examine + 1})\\nthe pareto run had {len(idx_indvs_pareto):,} individuals and the SOH generated {len(idx_indvs_soh):,}')\n",
+    "print(f'In this generation (no. {n_generation_examine + 1})\\nthe Pareto Optimisation run had {len(idx_indvs_pareto):,} individuals and the SOH Optimisation generated {len(idx_indvs_soh):,}')\n",
     "\n",
     "indvs_pareto_weights = np.array([knapsacks['weight'] for idx_knapsack, knapsacks in population_all_pareto.items() if idx_knapsack in idx_indvs_pareto])\n",
     "indvs_pareto_values  = np.array([knapsacks['value']  for idx_knapsack, knapsacks in population_all_pareto.items() if idx_knapsack in idx_indvs_pareto])\n",
@@ -2333,11 +2337,11 @@
     "\n",
     "indv_ = single_objective_selector(population_gen_pareto, n_select=1)\n",
     "key = list(indv_.keys())[0]\n",
-    "plt.plot(indv_[key]['weight'], indv_[key]['value'], '*', markersize=20, color='green', alpha=1, label='Pareto Optimisation max Value/Weight')\n",
+    "plt.plot(indv_[key]['weight'], indv_[key]['value'], '*', markersize=20, color='green', alpha=1, label=f'Pareto Optimisation max {heuristic}')\n",
     "\n",
     "indv_ = single_objective_selector(popuation_gen_soh, n_select=1)\n",
     "key = list(indv_.keys())[0]\n",
-    "plt.plot(indv_[key]['weight'], indv_[key]['value'], '*', markersize=20, color='red', alpha=0.6, label='Single Objective Optimisation max Value/Weight')\n",
+    "plt.plot(indv_[key]['weight'], indv_[key]['value'], '*', markersize=20, color='red', alpha=0.6, label=f'Single Objective Optimisation max {heuristic}')\n",
     "\n",
     "\n",
     "plt.legend(fontsize=10)  #(bbox_to_anchor=(1., 1))\n",
@@ -2435,13 +2439,15 @@
     "\n",
     "\n",
     "**Actions To Take**\n",
-    "- [ ] In [Knapsack Optimisation](#Knapsack-Optimisation) change to `n_generations=1` and increase to `2`, `3` etc. to see the step-by-step improvement of the Pareto front.  \n",
+    "- [ ] In [Knapsack Optimisation](#Knapsack-Optimisation) change to `n_generations=1` and increase to `2`, `3` etc. to see the step-by-step improvement of the Pareto front. \n",
+    "- [ ] In [Knapsack Optimisation](#Knapsack-Optimisation) change by large steps `n_generations=10`, `20`, `30` etc. to see at what stage improvement of the Pareto front slows. \n",
     "- [ ] In [Knapsack Optimisation](#Knapsack-Optimisation) change  `parents_compete`. How does this impact the results? \n",
-    "- [ ] Change the optimisation objective to minimising both weight and monetary value.   \n",
-    "This is done, e.g, by setting `objective_mode={'weight': 'min', 'value': 'min'}` in [Optimisation Objective](#Optimisation-Objective).   \n",
+    "- [ ] In [Knapsack Optimisation](#Knapsack-Optimisation) change the value of `n_initial_population` to `100`.\n",
+    "- [ ] In [Optimisation Objective](#Optimisation-Objective) change the optimisation objective to minimising both weight and monetary value.   \n",
+    "This is done, e.g, by setting `objective_mode={'weight': 'min', 'value': 'min'}`.   \n",
     "Try to guess in advance which knapsacks are considered Pareto Optimal!   \n",
     "Try all four combinations.  \n",
-    "- [ ] Examine the $value\\sim weight^2$ distribution by modifying `value_distribution_mode=\"squared\"` in [Packages](#Packages).\n",
+    "- [ ] In [Packages](#Packages) change `value_distribution_mode=\"squared\"` to examine rules of the $value\\sim weight^2$ distribution.\n",
     "- [ ] Create your own distribution! Create your own custom `value_distribution_mode` in [Packages](#Packages).   \n"
    ]
   },
@@ -2577,7 +2583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.6"
   },
   "toc": {
    "base_numbering": 1,
