bug squashed! indexes of children now consecutive

--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1860,7 +1860,7 @@
     "        idxs_parents_tranformations = population_tranformations_idxs(set(population_parents.keys()), cx_prob, mutate_prob, parents_compete=parents_compete, seed=seed)\n",
     "        \n",
     "        # generating the children popultation basedon the tranformation of the parents \n",
-    "        population_children, idxs_chidren = create_children(idx_indv_max + 1, idxs_parents_tranformations, population_parents, n_packages_mutate=n_packages_mutate)\n",
+    "        population_children, idxs_chidren = create_children(idx_indv_max, idxs_parents_tranformations, population_parents, n_packages_mutate=n_packages_mutate)\n",
     "        \n",
     "        for idx_indv, indv in population_children.items():\n",
     "            if idx_indv not in population_all_generations:\n",
