--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1827,8 +1827,8 @@
     "    \n",
     "\n",
     "# the genetic algorithm\n",
-    "def knapsack_genetic_algorithm(n_generations, n_initial_population=None, n_packages_mutate=None, \n",
-    "                               cx_prob=None, mutate_prob=None, seed=None, exact_n_selection=False, \n",
+    "def knapsack_genetic_algorithm(n_generations, n_initial_population=None, unique_indvs=False, n_packages_mutate=None,  \n",
+    "                               cx_prob=None, mutate_prob=None, seed=None, n_select=None, exact_n_selection=False, \n",
     "                               parents_compete=None, selector='pareto_naive', visualise=True, display_pareto_front=True):\n",
     "    if not cx_prob:\n",
     "        cx_prob = PROB_CROSS_OVER\n",
@@ -1840,9 +1840,14 @@
     "        n_initial_population = N_INITIAL_POPULATION\n",
     "    if parents_compete is None:\n",
     "        parents_compete = PARENTS_COMPETE\n",
+    "    if n_select is None:\n",
+    "        n_select = n_initial_population\n",
     "        \n",
     "    # initial population\n",
     "    population_parents = create_knapsacks(n_initial_population, seed=seed)\n",
+    "    \n",
+    "    if unique_indvs:\n",
+    "        population_parents = {frozenset(population_parents[key]['packages']): population_parents[key] for key in population_parents}\n",
     "    \n",
     "    # evaluating fitness of the initial population\n",
     "    if 'single_objective_optimisation' == selector:\n",
@@ -1853,14 +1858,17 @@
     "    population_all_generations = {idx_indv: {'packages': population_parents[idx_indv]['packages']} for idx_indv in population_parents}\n",
     "    \n",
     "    for gen_num in range(n_generations):\n",
-    "        idx_indv_max = np.max(list(population_all_generations.keys())) # keeps track of highest valued individual\n",
-    "    \n",
+    "        # keeping track of highest valued individual (useful when unique_indvs=False)\n",
+    "        idx_indv_max = len(population_all_generations) - 1\n",
+    "        \n",
     "        # --- population tranformations ---\n",
     "        # dictionary containing the the transofrmations (replicate, mutate, mate) and the idxs of parents that will go through each transformation\n",
     "        idxs_parents_tranformations = population_tranformations_idxs(set(population_parents.keys()), cx_prob, mutate_prob, parents_compete=parents_compete, seed=seed)\n",
     "        \n",
     "        # generating the children popultation basedon the tranformation of the parents \n",
     "        population_children, idxs_chidren = create_children(idx_indv_max, idxs_parents_tranformations, population_parents, n_packages_mutate=n_packages_mutate)\n",
+    "        if unique_indvs:\n",
+    "            population_children = {frozenset(population_children[key]['packages']): population_children[key] for key in population_children}\n",
     "        \n",
     "        for idx_indv, indv in population_children.items():\n",
     "            if idx_indv not in population_all_generations:\n",
@@ -1890,7 +1898,7 @@
     "\n",
     "        # the selection function: Naive Pareto Selector or Single Objective Optimisation \n",
     "        if 'single_objective_optimisation' == selector:\n",
-    "            individuals_selected = single_objective_selector(population_competing, n_select=len(population_parents))\n",
+    "            individuals_selected = single_objective_selector(population_competing, n_select=n_select)\n",
     "            pareto_fronts = None\n",
     "        else:\n",
     "            pareto_fronts, individuals_selected = naive_pareto_selector(population_competing, \n",
@@ -1967,13 +1975,20 @@
     "# running the knapsack problem with a genetic algorithm\n",
     "\n",
     "n_generations = 20           # CHANGE ME! Number of iterations\n",
-    "parents_compete = True       # CHANGE ME!\n",
-    "selector = 'pareto_naive'    # Leave this selection function method. Below we compare with 'single_objective_optimisation'\n",
+    "n_initial_population = 20    # CHANGE ME!\n",
+    "parents_compete = True       # CHANGE ME! True: parents and children compete for selection, False: only children compete\n",
+    "unique_indvs = False         # CHANGE ME! True: no knapsack duplication, False: may have knapsack duplication\n",
+    "n_select = 20                # CHANGE ME! number of competing individuals selected for the next generation\n",
+    "exact_n_selection = True    # CHANGE ME! True: selector limited to n_select, False: selector might go above n_select (relevant for selector='pareto_naive')\n",
+    "\n",
     "display_pareto_front = True  # Visualises the Pareto front \n",
     "seed = 1                     # CHANGE ME! For different distributions and runs\n",
     "\n",
+    "selector = 'pareto_naive'    # Leave this selection function method. Below we compare with 'single_objective_optimisation'\n",
     "population_all_pareto = knapsack_genetic_algorithm(n_generations, seed=seed, selector=selector, \n",
-    "                                                   exact_n_selection=True,\n",
+    "                                                   unique_indvs=unique_indvs, \n",
+    "                                                   n_initial_population=n_initial_population,\n",
+    "                                                   n_select=n_select, exact_n_selection=exact_n_selection,\n",
     "                                                   parents_compete=parents_compete,\n",
     "                                                   display_pareto_front=display_pareto_front\n",
     "                                                  )\n",
@@ -2040,10 +2055,12 @@
     "selector = 'single_objective_optimisation'\n",
     "\n",
     "population_all_soh = knapsack_genetic_algorithm(n_generations, seed=seed, selector=selector, \n",
-    "                                                exact_n_selection=True, \n",
-    "                                                parents_compete=parents_compete,\n",
-    "                                                display_pareto_front=display_pareto_front\n",
-    "                                               )\n",
+    "                                                   unique_indvs=unique_indvs, \n",
+    "                                                   n_initial_population=n_initial_population,\n",
+    "                                                   n_select=n_select, exact_n_selection=exact_n_selection,\n",
+    "                                                   parents_compete=parents_compete,\n",
+    "                                                   display_pareto_front=display_pareto_front\n",
+    "                                                  )\n",
     "\n",
     "plt.xlim(*x_lim)\n",
     "plt.ylim(*y_lim)\n",
@@ -2442,6 +2459,7 @@
     "- [ ] In [Knapsack Optimisation](#Knapsack-Optimisation) change to `n_generations=1` and increase to `2`, `3` etc. to see the step-by-step improvement of the Pareto front. \n",
     "- [ ] In [Knapsack Optimisation](#Knapsack-Optimisation) change by large steps `n_generations=10`, `20`, `30` etc. to see at what stage improvement of the Pareto front slows. \n",
     "- [ ] In [Knapsack Optimisation](#Knapsack-Optimisation) change  `parents_compete`. How does this impact the results? \n",
+    "- [ ] In [Knapsack Optimisation](#Knapsack-Optimisation) change  `unique_indvs`. A `True` value ensures that all knapsacks are unique (`False` allows for duplicates). How does this impact the results?\n",
     "- [ ] In [Knapsack Optimisation](#Knapsack-Optimisation) change the value of `n_initial_population` to `100`.\n",
     "- [ ] In [Optimisation Objective](#Optimisation-Objective) change the optimisation objective to minimising both weight and monetary value.   \n",
     "This is done, e.g, by setting `objective_mode={'weight': 'min', 'value': 'min'}`.   \n",
