--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1579,7 +1579,7 @@
     "* `IBEA` - Indicator-Based Evolutionary Algorithm  \n",
     "\n",
     "They account for further details that are beyond the scope of this notebook:  \n",
-    "* Elitism - selected individuals progress to the next generation bypassing the selection process\n",
+    "* Elitism - a fraction of the selected individuals progress to the next generation, bypassing the mutation and crossover processes\n",
     "* Density estimation - optimised to reduce the density of selected solution in the Objective Space \n",
     "* Preserving edge results - preserves edge solutions in the Objective space\n",
     "* Pareto Front heuristics for comparisons\n",
@@ -2053,7 +2053,6 @@
    ],
    "source": [
     "selector = 'single_objective_optimisation'\n",
-    "\n",
     "population_all_soh = knapsack_genetic_algorithm(n_generations, seed=seed, selector=selector, \n",
     "                                                   unique_indvs=unique_indvs, \n",
     "                                                   n_initial_population=n_initial_population,\n",
@@ -2273,7 +2272,7 @@
     "\n",
     "* use a larger initial population: `n_initial_population`. (This may be considered niching - starting from more solutions).      \n",
     "* select more individuals per round by vayring `n_select`    \n",
-    "* ensure no replications by setting `PROB_CROSS_OVER - PROB_MUTATION = 1`  \n",
+    "* ensure no replications by setting `PROB_CROSS_OVER + PROB_MUTATION = 1`  \n",
     "* increase the number of packages mutating `N_PACKAGES_MUTATE` \n",
     "* change the problem by increasing the number of total packages `N_PACKAGES` ([Packages section](#Packages)) "
    ]
@@ -2463,7 +2462,8 @@
     "- [ ] In [Knapsack Optimisation](#Knapsack-Optimisation) change by large steps `n_generations=10`, `20`, `30` etc. to see at what stage improvement of the Pareto front slows. \n",
     "- [ ] In [Knapsack Optimisation](#Knapsack-Optimisation) change  `parents_compete`. How does this impact the results? \n",
     "- [ ] In [Knapsack Optimisation](#Knapsack-Optimisation) change  `unique_indvs`. A `True` value ensures that all knapsacks are unique (`False` allows for duplicates). How does this impact the results?\n",
-    "- [ ] In [Knapsack Optimisation](#Knapsack-Optimisation) change the value of `n_initial_population` to `100`.\n",
+    "- [ ] In [Knapsack Optimisation](#Knapsack-Optimisation) change the value of `seed`. Has this changed any conclusions that you derived so far?  \n",
+    "- [ ] In [Knapsack Optimisation](#Knapsack-Optimisation) change the value of `n_initial_population` to `100`. Is this useful?\n",
     "- [ ] In [Optimisation Objective](#Optimisation-Objective) change the optimisation objective to minimising both weight and monetary value.   \n",
     "This is done, e.g, by setting `objective_mode={'weight': 'min', 'value': 'min'}`.   \n",
     "Try to guess in advance which knapsacks are considered Pareto Optimal!   \n",
