--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -2559,12 +2559,13 @@
     "\n",
     "plt.subplot(1, 2, 1)\n",
     "\n",
-    "plt.bar(package_idxs - width/2, package_counts_pareto.values(), color='green', width=width, alpha=alpha)\n",
-    "plt.bar(package_idxs + width/2, package_counts_soh.values() , color='red', width=width, alpha=alpha)\n",
+    "plt.bar(package_idxs - width/2, package_counts_pareto.values(), color='green', width=width, alpha=alpha, label='Pareto Optimisation', hatch='/')\n",
+    "plt.bar(package_idxs + width/2, package_counts_soh.values() , color='red', width=width, alpha=alpha, label=f'SOH {heuristic}')\n",
     "plt.xticks(np.arange(len(package_idxs)), package_idxs)\n",
     "\n",
     "plt.xlabel('package index')\n",
     "plt.ylabel('counts')\n",
+    "plt.legend()\n",
     "\n",
     "# ----\n",
     "\n",
