updating pycon usa 2021 logo

--- a/03_knapsack_2D_deap.ipynb
+++ b/03_knapsack_2D_deap.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "weighted-proof",
+   "metadata": {},
+   "source": [
+    "This notebook may be used in Google Colab. To access press this button:    \n",
+    "<a href=\"https://bit.ly/deap-knapsack-colab\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "realistic-specification",
    "metadata": {},
    "source": [
@@ -28,6 +37,18 @@
     "\n",
     "\n",
     "For the most part we follow thier [Knapsack tutorial](https://deap.readthedocs.io/en/master/examples/ga_knapsack.html), in which the individual knapsacks inherite from `set`s. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "unavailable-privilege",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://tinyurl.com/vrdj29w9\" width=\"700\">  \n",
+    "\n",
+    "**One final note for PyCon USA participants**  \n",
+    "\n",
+    "Don't worry if you don't manage to to go through everything in depth during the allocated time. You will be able to access to this notebook later."
    ]
   },
   {
@@ -1419,7 +1440,9 @@
     "To obtain the full information we will hack `eaMuPlusLambda` below as `eaMuPlusLambda_hack`, \n",
     "where we introduce the `all_generations` dictionary.\n",
     "\n",
-    "We also show (but do not modify) the `varOr` function that is used."
+    "We also show (but do not modify) the `varOr` function that is used.\n",
+    "\n",
+    "[source code in github](https://github.com/DEAP/deap/blob/master/deap/algorithms.py)"
    ]
   },
   {
