--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -78,9 +78,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://global.pydata.org/assets/images/logo.png\" width=\"300\">  \n",
+    "<img src=\"https://tinyurl.com/vrdj29w9\" width=\"700\">  \n",
     "\n",
-    "**One final note to PyData Global participants**  \n",
+    "**One final note for PyCon USA participants**  \n",
     "\n",
     "Don't worry if you don't manage to to go through everything in depth during the allocated time. You will be able to access to this notebook later."
    ]
